# GStreamerTutorial

./: CMakeLists.txt  DynamicPipelines.c  GStreamerConcepts.c  HelloWorld.c
